<resources>
    <string name="app_name">VideoConverter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="signup">Signup</string>
    <string name="copyright">© LSM 2023 - Video Converter</string>
    <string name="back_button">Back button</string>
    <string name="enter_username">Enter your username</string>
    <string name="enter_password">Enter your password</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="change_password">Change password</string>
    <string name="enter_email">Enter your Email</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="home">Home</string>
    <string name="library">Library</string>
    <string name="settings">Settings</string>
    <string name="enter_new_password">Enter your new password</string>
    <string name="enter_newConf_password">Confirm your new password</string>
    <string name="clear_music">Clear search</string>
    <string name="favorite_button">Favorite button</string>
    <string name="delete_button">delete button</string>
    <string name="play_button">Play button</string>
    <string name="music_title">Music title</string>
    <string name="artist_name">Artist name</string>
    <string name="duration">00:00</string>
    <string name="search_button">Search button</string>
    <string name="search_music">Search music</string>
    <string name="no_result">No result</string>
    <string name="enter_music_title">Enter music title</string>
</resources>