<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iv_thumbnail"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_launcher_background" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="top"
            android:orientation="vertical"
            android:paddingHorizontal="16dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="206dp"
                android:layout_height="45dp"
                android:text="@string/music_title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_artist"
                android:layout_width="171dp"
                android:layout_height="31dp"
                android:text="@string/artist_name"
                android:textSize="14sp" />


        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:contentDescription="@string/delete_button"
                android:src="@drawable/ic_delete"
                app:layout_constraintStart_toStartOf="@id/layout_button"
                app:layout_constraintTop_toTopOf="@+id/layout_button" />

            <ImageButton
                android:id="@+id/btn_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@null"
                android:contentDescription="@string/play_button"
                android:src="@drawable/ic_play_border"
                app:layout_constraintBottom_toBottomOf="@id/layout_button"
                app:layout_constraintStart_toStartOf="@id/layout_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>